Switch between 2 language

--- a/index_zh_TW.html
+++ b/index_zh_TW.html
@@ -38,7 +38,7 @@
        
 
         <li class="nav-item">
-          <a class="nav-link " href="#">English</a>
+          <a class="nav-link " href="index.html">English</a>
         </li>
       </ul>
       
