--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </li>
       -->
         <li class="nav-item">
-          <a class="nav-link " href="#">Chinese</a>
+          <a class="nav-link " href="index_zh_TW.html">Chinese</a>
         </li>
       </ul>
       
