Fix link and pic

--- a/index.html
+++ b/index.html
@@ -102,12 +102,12 @@
 <div class="social">
   <div class="row ">
     <div class="col-mb-6 ">
-      <a href="../KatWu-Website/page 2/index.html">
+      <a href="#!">
         <img src="images/Group 92.png" alt="Before" >
       </a>
     </div>
     <div class="col-mb-6">
-      <a href="https://www.instagram.com/katandarrow/?hl=en">
+      <a href="#!">
         <img src="images/Group 93.png" alt="After" ></a>
            </div>
   </div>
@@ -220,20 +220,17 @@
                     <h4 class="footer-text">Our vision is to provide our customers the high quality and affordable services with honest experts you can trust.</h5>
                 <ul class="list">    
             </div>
-           
-
             <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
-                <h5 class="footer-text-title">Contacts</h5>
-            <ul class="list-unstyled">
-                <li class="mb-2">
-                <a href="#!" class="footer-text"><i class="fas fa-paw pe-0"></i>Consoltations</a>
-                </li>
-                <li class="mb-2">
-                <a href="#!" class="footer-text"><i class="fas fa-paw pe-0"></i>FaceBook</a>
-                </li>
-            </ul>
-            </div>
- 
+              <h5 class="footer-text-title">Contacts</h5>
+          <ul class="list-unstyled">
+              <li class="mb-2">
+              <a href="#!" class="footer-text"><i class="fas fa-paw pe-0"></i>Consoltations</a>
+              </li>
+              <li class="mb-2">
+              <a href="#!" class="footer-text"><i class="fas fa-paw pe-0"></i>FaceBook</a>
+              </li>
+          </ul>
+          </div>
  
            <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
                <h5 class="footer-text-title">Galary</h5>
