--- a/index_zh_TW.html
+++ b/index_zh_TW.html
@@ -78,13 +78,13 @@
 <div class="social">
   <div class="row ">
     <div class="col-mb-6 ">
-      <a href="../KatWu-Website/page 2/index.html">
-        <img src="../images/Group 92.png" alt="Media" >
+      <a href="#">
+        <img src="images/Group 92.png" alt="Media" >
       </a>
     </div>
     <div class="col-mb-6">
-      <a href="https://www.instagram.com/katandarrow/?hl=en">
-        <img src="../images/Group 93.png" alt="instagram" ></a>
+      <a href="#">
+        <img src="images/Group 93.png" alt="instagram" ></a>
            </div>
   </div>
   </div>
@@ -130,7 +130,7 @@
           <div class="review">
             <div class="row ">
               <div class="col-md-8" >
-                  <img src="../images/review.png" alt="Media" >
+                  <img src="images/review.png" alt="Media" >
                 </a>
               </div>
               <div class="col-md-4" style="text-align: right; margin:auto; ">
@@ -182,7 +182,7 @@
               
               <div class="col-lg-3 col-md-5 mb-4 mb-md-0">
                 <div class=" d-flex align-items-center  mb-xl-3 mx-auto" style="width: 250px;  height: 50px;">
-                    <img src="../images/footer_logo.png" height="50"  alt="Precision Renovator" />
+                    <img src="images/footer_logo.png" height="50"  alt="Precision Renovator" />
                   </div>
                   <p class="footer-text"><br>基於 Fremont (弗里蒙特), CA 94538
                       <br>(510) 509-4216 <br>modelwang@gmail.com                    
