--- a/index_zh_TW.html
+++ b/index_zh_TW.html
@@ -199,7 +199,7 @@
            
 
             <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
-                <h5 class="footer-text-title">Contacts</h5>
+                <h5 class="footer-text-title">聯絡我們</h5>
             <ul class="list-unstyled">
                 <li class="mb-2">
                 <a href="#!" class="footer-text"><i class="fas fa-paw pe-0"></i>諮詢</a>
