--- a/index_zh_TW.html
+++ b/index_zh_TW.html
@@ -92,7 +92,7 @@
   <br>
   <br>
   <div class="container-fluid">
-    <h1 class="mt-5">Catagory</h1>
+    <h1 class="mt-5">類別</h1>
 		<p class="subtitle"></p>
     <div class="scrolling-wrapper row flex-row flex-nowrap mt-2 pb-4 pt-2">
 			
